--- a/actions/harbor/action.yml
+++ b/actions/harbor/action.yml
@@ -1,6 +1,21 @@
 name: 'Build and publish to harbor'
 description: 'Build and publish to dockerhub and IMIO container registry'
 inputs:
+  DOCKERHUB_USERNAME:
+    description: 'DOCKERHUB_USERNAME'
+    required: true
+  DOCKERHUB_PASSWORD:
+    description: 'DOCKERHUB_PASSWORD'
+    required: true
+  HARBOR_URL:
+    description: 'HARBOR_URL'
+    required: true
+  DELIB_HARBOR_USERNAME:
+    description: 'DELIB_HARBOR_USERNAME'
+    required: true
+  DELIB_HARBOR_PASSWORD:
+    description: 'DELIB_HARBOR_PASSWORD'
+    required: true
   profile:
     description: 'Buildout profile'
     required: true
@@ -24,14 +39,14 @@ runs:
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        username: ${{ inputs.DOCKERHUB_USERNAME }}
+        password: ${{ inputs.DOCKERHUB_PASSWORD }}
     - name: Login to Harbor
       uses: docker/login-action@v3
       with:
-        registry: ${{ secrets.HARBOR_URL }}
-        username: ${{ secrets.DELIB_HARBOR_USERNAME }}
-        password: ${{ secrets.DELIB_HARBOR_PASSWORD }}
+        registry: ${{ inputs.HARBOR_URL }}
+        username: ${{ inputs.DELIB_HARBOR_USERNAME }}
+        password: ${{ inputs.DELIB_HARBOR_PASSWORD }}
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
