--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -167,6 +167,8 @@ services:
       test: "curl -f localhost:8080/$$PLONE_PATH/@@ok"
     volumes:
       - ./data:/data
+      - ./data/import:/data/import
+      - ./extensions:/plone/parts/instance-debug/Extensions
       - tmp:/tmp
       - vartmp:/var/tmp
     labels:
