--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     depends_on:
       - zeo
       - libreoffice
-      - worker-cron
+#      - worker-cron
     environment:
       - ZEO_CLIENT_CACHE_SIZE=1000MB
       - ZODB_CACHE_SIZE=100000
@@ -62,32 +62,32 @@ services:
     labels:
       SERVICE_NAME: "instance1"
 
-  worker-cron:
-    image: imiobe/iadelib:latest
-    command: instance-cron
-    ports:
-      - "8087:8087"
-    networks:
-      - delib_internal
-      - delib_external
-    depends_on:
-      - zeo
-    environment:
-      - ZEO_CLIENT_CACHE_SIZE=1000MB
-      - ZODB_CACHE_SIZE=100000
-      - ADMIN_PASSWORD=test
-      - PUBLIC_URL=http://localhost/PM
-      - PLONE_PATH=demo
-      - CLUSTER=iadelib_pm42
-      - HOSTNAME=worker-cron
-    volumes:
-      - ./data:/data
-      - tmp:/tmp
-      - vartmp:/var/tmp
-    healthcheck:
-      test: "curl -f localhost:8087/$$PLONE_PATH/@@ok"
-    labels:
-      SERVICE_NAME: "worker-cron"
+  # worker-cron:
+  #   image: imiobe/iadelib:latest
+  #   command: instance-cron
+  #   ports:
+  #     - "8087:8087"
+  #   networks:
+  #     - delib_internal
+  #     - delib_external
+  #   depends_on:
+  #     - zeo
+  #   environment:
+  #     - ZEO_CLIENT_CACHE_SIZE=1000MB
+  #     - ZODB_CACHE_SIZE=100000
+  #     - ADMIN_PASSWORD=test
+  #     - PUBLIC_URL=http://localhost/PM
+  #     - PLONE_PATH=demo
+  #     - CLUSTER=iadelib_pm42
+  #     - HOSTNAME=worker-cron
+  #   volumes:
+  #     - ./data:/data
+  #     - tmp:/tmp
+  #     - vartmp:/var/tmp
+  #   healthcheck:
+  #     test: "curl -f localhost:8087/$$PLONE_PATH/@@ok"
+  #   labels:
+  #     SERVICE_NAME: "worker-cron"
 
   worker-async:
     image: imiobe/iadelib:latest
@@ -122,7 +122,7 @@ services:
       - delib_external
     depends_on:
       - zeo
-      - worker-cron
+#      - worker-cron
     environment:
       - ZEO_CLIENT_CACHE_SIZE=1000MB
       - ZODB_CACHE_SIZE=100000
@@ -144,7 +144,7 @@ services:
       - tmp:/tmp
       - vartmp:/var/tmp
     labels:
-      SERVICE_NAME: "worker-cron"
+      SERVICE_NAME: "worker-amqp"
 
   maintenance:
     image: imiobe/iadelib:latest
@@ -156,7 +156,7 @@ services:
     depends_on:
       - zeo
       - libreoffice
-      - worker-cron
+#      - worker-cron
     environment:
       - ZEO_CLIENT_CACHE_SIZE=1000MB
       - ZODB_CACHE_SIZE=100000
