--- a/docker/docker-compose-dev.yml
+++ b/docker/docker-compose-dev.yml
@@ -51,6 +51,7 @@ services:
       - CLUSTER=iadelib_pm42
       - HOSTNAME=instance1
       - PLONE_PATH=demo
+      - ADMIN_PASSWORD=test
     volumes:
       - ./data/:/data
       - tmp:/tmp
