--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       - CLUSTER=iadelib_pm42
       - HOSTNAME=instance1
       - PLONE_PATH=demo
+      - ADMIN_PASSWORD=test
     volumes:
       - ./data:/data
       - tmp:/tmp
