Use sources for imio.helpers, Products.PloneMeeting and Products.MeetingCommunes

--- a/prod-test.cfg
+++ b/prod-test.cfg
@@ -4,6 +4,9 @@ extends =
     dev.cfg
 
 auto-checkout =
+    imio.helpers
+    Products.PloneMeeting
+    Products.MeetingCommunes
 
 parts =
     testprod
