--- a/versions.cfg
+++ b/versions.cfg
@@ -5,17 +5,17 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2.8.2
+Products.PloneMeeting = 4.2.9rc1
 
 # profile specific versions
-Products.MeetingCommunes = 4.2.5
+Products.MeetingCommunes = 4.2.6rc1
 
 # Required by:
 # Products.PloneMeeting
 appy = 1.0.15
 archetypes.schematuning = 1.2
 beautifulsoup4 = 4.5.3
-collective.behavior.internalnumber = 0.2
+collective.behavior.internalnumber = 0.3
 collective.behavior.talcondition = 1.0a1
 collective.ckeditor = 4.10.1
 collective.compoundcriterion = 0.7
@@ -27,7 +27,7 @@ collective.documentgenerator = 3.39
 collective.eeafaceted.batchactions = 1.14
 collective.eeafaceted.collectionwidget = 1.16
 collective.eeafaceted.dashboard = 0.20
-collective.eeafaceted.z3ctable = 2.25
+collective.eeafaceted.z3ctable = 2.26
 collective.fingerpointing = 1.8.2
 collective.js.fancytree = 2.20.0.1
 collective.js.iframeresizer = 0.4
@@ -42,21 +42,21 @@ dexterity.localrolesfield = 1.2
 dexterity.localroles = 1.4
 ecreall.helpers.upgrade = 1.4
 ftw.labels = 2.0.1
-imio.annex = 2.20
-imio.actionspanel = 1.64
+imio.annex = 2.21
+imio.actionspanel = 1.65
 imio.dashboard = 2.12
-imio.helpers = 0.77
-imio.migrator = 1.33
-imio.history = 1.30
-imio.pm.locales = 4.2.8
-imio.prettylink = 1.21
-imio.pyutils = 0.31
+imio.helpers = 1.0.0rc1
+imio.migrator = 1.34
+imio.history = 1.33
+imio.pm.locales = 4.2.14
+imio.prettylink = 1.22
+imio.pyutils = 1.0.0a1
 natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.6
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
-plonetheme.imioapps = 2.43
+plonetheme.imioapps = 2.45
 Products.CPUtils = 1.23
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
@@ -68,10 +68,10 @@ six = 1.14.0
 
 #Required by:
 #imio.annex
-collective.dms.scanbehavior = 1.3
+collective.dms.scanbehavior = 1.3.0
 collective.fontawesome = 1.1
-collective.iconifiedcategory = 0.60
-collective.js.tooltipster = 1.7
+collective.iconifiedcategory = 0.64
+collective.js.tooltipster = 1.8
 icalendar = 3.11
 z3c.jbot = 0.7.2
 z3c.json = 0.5.5
@@ -189,7 +189,7 @@ fpconst = 0.7.2
 SOAPpy = 0.12.5
 suds-jurko = 0.6
 
-imio.pm.ws = 3.8
+imio.pm.ws = 3.9
 imio.pm.wsclient = 1.17
 
 plone.app.async = 1.6
@@ -237,7 +237,7 @@ functools32 = 3.2.3.post2
 
 # plonemeeting.restapi
 imio.restapi = 1.0b3
-plonemeeting.restapi = 2.2
+plonemeeting.restapi = 2.3
 
 plone.restapi = 7.8.2
 PyJWT = 1.7.1
