[MOD] docker.cfg wip

--- a/docker.cfg
+++ b/docker.cfg
@@ -1,3 +1,48 @@
 [buildout]
-extends =
-    docker-dev.cfg
+parts +=
+    instance
+parts -=
+    instance1
+    instance2
+    instance3
+    instance4
+
+[zeoserver]
+file-storage = /data/filestorage/Data.fs
+blob-storage = /data/blobstorage
+zeo-address = zeo:8100
+
+[instance]
+<= instance1
+debug-mode = off
+blob-storage = /data/blobstorage
+shared-blob = on
+zope-conf-additional =
+    <product-config five.z2monitor>
+       bind 0.0.0.0:${port:instance1-monitor}
+    </product-config>
+    ${zope-conf:additional}
+    <clock-server>
+      method /${port:plone-path}/@@cron-tick
+      period 3600
+      user admin
+      password ${port:admin-password}
+    </clock-server>
+    ${zope-conf:zamqp}
+environment-vars -=
+    OO_PORT ${port:oo-port}
+    PYTHON_UNO ${port:python-uno}
+
+[instance-amqp]
+blob-storage = /data/blobstorage
+
+[instance-async]
+debug-mode = off
+blob-storage = /data/blobstorage
+environment-vars =
+    ZC_ASYNC_UUID /data/async-uuid.txt
+
+[instance-debug]
+blob-storage = /data/blobstorage
+zodb-cache-size = 5000
+zeo-client-cache-size = 200MB
