--- a/docker/Dockerfile-test
+++ b/docker/Dockerfile-test
@@ -17,7 +17,7 @@ RUN rm -fr rm -fr bin include lib local share develop-eggs downloads parts .inst
   && echo "extends =" >> buildout.cfg \
   && echo "    $PROFILE" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
-  && echo "    docker-dev.cfg" >> buildout.cfg \
+  && echo "    docker.cfg" >> buildout.cfg \
   && echo "Buildout config :" \
   && cat buildout.cfg \
   && virtualenv -p python2 . \
