Use: - Products.PloneMeeting = 4.2.9rc2 - Products.MeetingCommunes = 4.2.6 - collective.contact.plonegroup = 1.48 - imio.pm.locales = 4.2.15

--- a/versions.cfg
+++ b/versions.cfg
@@ -5,10 +5,10 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2.9rc1
+Products.PloneMeeting = 4.2.9rc2
 
 # profile specific versions
-Products.MeetingCommunes = 4.2.6rc1
+Products.MeetingCommunes = 4.2.6
 
 # Required by:
 # Products.PloneMeeting
@@ -20,7 +20,7 @@ collective.behavior.talcondition = 1.0a1
 collective.ckeditor = 4.10.1
 collective.compoundcriterion = 0.7
 collective.contact.core = 1.39
-collective.contact.plonegroup = 1.47
+collective.contact.plonegroup = 1.48
 collective.contact.widget = 1.13
 collective.dexteritytextindexer = 2.2.1
 collective.documentgenerator = 3.39
@@ -48,7 +48,7 @@ imio.dashboard = 2.12
 imio.helpers = 1.0.0rc1
 imio.migrator = 1.34
 imio.history = 1.33
-imio.pm.locales = 4.2.14
+imio.pm.locales = 4.2.15
 imio.prettylink = 1.22
 imio.pyutils = 1.0.0a1
 natsort = 6.2.1
