--- a/sources.cfg
+++ b/sources.cfg
@@ -57,8 +57,9 @@ imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_pus
 Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
 # used to test branches on Jenkins, leave branch=master by default
 Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
-# profiles specific package
+# profiles specific package, defined here because Jenkins will change the branch when needed
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
+Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${remotes:imio_push}/Products.MeetingLiege.git branch=master
 
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
