Moved source definition for Products.MeetingProvHainaute to sources.cfg so jenkins can test the branch as it manipulate the sources.cfg file

--- a/sources.cfg
+++ b/sources.cfg
@@ -60,6 +60,7 @@ Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${
 # profiles specific package, defined here because Jenkins will change the branch when needed
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${remotes:imio_push}/Products.MeetingLiege.git branch=master
+Products.MeetingPROVHainaut = git ${remotes:imio}/Products.MeetingPROVHainaut.git pushurl=${remotes:imio_push}/Products.MeetingPROVHainaut.git branch=master
 
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
