--- a/versions.cfg
+++ b/versions.cfg
@@ -236,7 +236,7 @@ PyPDF2 = 1.26.0
 functools32 = 3.2.3.post2
 
 # plonemeeting.restapi
-imio.restapi = 1.0b3
+imio.restapi = 1.0rc1
 plonemeeting.restapi = 2.4
 
 plone.restapi = 7.8.2
