Restored correct buildout.cfg default

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,13 +1,13 @@
 [buildout]
 
 extends =
-#     communes.cfg
+     communes.cfg
 #    communes-dev.cfg
 #    bep.cfg
 #    bep-dev.cfg
 #    charleroi.cfg
 #    charleroi-dev.cfg
-    hainaut-prov.cfg
+#    hainaut-prov.cfg
 #    hainaut-prov-dev.cfg
 #    idea.cfg
 #    idea-dev.cfg
@@ -28,4 +28,4 @@ extends =
 #    solr.cfg
 #    ldap.cfg
 #    wca.cfg
-    prod-test.cfg
+#    prod-test.cfg
