Fixed bep-dev Use MeetingBEP 4.2 in production

--- a/bep-dev.cfg
+++ b/bep-dev.cfg
@@ -26,5 +26,6 @@ Products.MeetingBEP = git ${remotes:imio}/Products.MeetingBEP.git pushurl=${remo
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingBEP']
 eggs =
+    ${test:eggs}
     Products.MeetingBEP [test]
 environment = testenv
