Use imio.actionspanel 1.64 for now as we still do not manage typeInfo title completely

--- a/versions.cfg
+++ b/versions.cfg
@@ -43,7 +43,8 @@ dexterity.localroles = 1.4
 ecreall.helpers.upgrade = 1.4
 ftw.labels = 2.0.1
 imio.annex = 2.21
-imio.actionspanel = 1.65
+# XXX use imio.actionspanel 1.65+ when managing portal_type title
+imio.actionspanel = 1.64
 imio.dashboard = 2.12
 imio.helpers = 1.0.0rc1
 imio.migrator = 1.34
