--- a/mons.cfg
+++ b/mons.cfg
@@ -12,6 +12,6 @@ zcml +=
     Products.MeetingMons
 
 [versions]
-Products.MeetingMons = 4.2.0b6
-imio.webspellchecker = 1.0a1
+Products.MeetingMons = 4.2.0
+imio.webspellchecker = 1.0b3
 
