Use imio.webspellchecker

--- a/base.cfg
+++ b/base.cfg
@@ -131,6 +131,7 @@ eggs =
     collective.monitor
     Products.DocFinderTab
     Products.PloneMeeting
+    imio.webspellchecker 
 # backward compat, to be removed after buildout.pm 4.1.17 is released
     Products.PloneMeeting[amqp]
     five.z2monitor
