--- a/versions.cfg
+++ b/versions.cfg
@@ -52,6 +52,7 @@ imio.history = 1.33
 imio.pm.locales = 4.2.16
 imio.prettylink = 1.22
 imio.pyutils = 1.0.0a1
+imio.webspellchecker = 1.0b6
 natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.7
