--- a/sources.cfg
+++ b/sources.cfg
@@ -22,7 +22,7 @@ collective.contact.plonegroup = git ${remotes:collective}/collective.contact.plo
 collective.contact.widget = git ${remotes:collective}/collective.contact.widget.git pushurl=${remotes:collective_push}/collective.contact.widget.git
 collective.dms.scanbehavior = git ${remotes:collective}/collective.dms.scanbehavior.git pushurl=${remotes:collective_push}/collective.dms.scanbehavior.git
 collective.documentgenerator = git ${remotes:collective}/collective.documentgenerator.git pushurl=${remotes:collective_push}/collective.documentgenerator.git
-collective.eeafaceted.batchactions = git ${remotes:imio}/collective.eeafaceted.batchactions.git pushurl=${remotes:imio_push}/collective.eeafaceted.batchactions.git
+collective.eeafaceted.batchactions = git ${remotes:imio}/collective.eeafaceted.batchactions.git pushurl=${remotes:imio_push}/collective.eeafaceted.batchactions.git branch=MPMBRWP-19_protect_unavailable_batch_action
 collective.eeafaceted.collectionwidget = git ${remotes:collective}/collective.eeafaceted.collectionwidget.git pushurl=${remotes:collective_push}/collective.eeafaceted.collectionwidget.git
 collective.eeafaceted.dashboard = git ${remotes:collective}/collective.eeafaceted.dashboard.git pushurl=${remotes:collective_push}/collective.eeafaceted.dashboard.git
 collective.eeafaceted.z3ctable = git ${remotes:collective}/collective.eeafaceted.z3ctable.git pushurl=${remotes:collective_push}/collective.eeafaceted.z3ctable.git
@@ -42,7 +42,7 @@ collective.big.bang = git ${remotes:collective}/collective.big.bang.git pushurl=
 communesplone.layout = git ${remotes:imio}/communesplone.layout.git pushurl=${remotes:imio_push}/communesplone.layout.git
 ftw.labels = git ${remotes:ftw}/ftw.labels.git pushurl=${remotes:ftw_push}/ftw.labels.git
 imio.actionspanel = git ${remotes:imio}/imio.actionspanel.git pushurl=${remotes:imio_push}/imio.actionspanel.git
-imio.annex = git ${remotes:imio}/imio.annex.git pushurl=${remotes:imio_push}/imio.annex.git
+imio.annex = git ${remotes:imio}/imio.annex.git pushurl=${remotes:imio_push}/imio.annex.git branch=MPMBRWP-19_batch_action_concatenate_annexes
 imio.dashboard = git ${remotes:imio}/imio.dashboard.git pushurl=${remotes:imio_push}/imio.dashboard.git
 imio.helpers = git ${remotes:imio}/imio.helpers.git pushurl=${remotes:imio_push}/imio.helpers.git
 imio.history = git ${remotes:imio}/imio.history.git pushurl=${remotes:imio_push}/imio.history.git
@@ -56,7 +56,7 @@ imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_pus
 
 Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
 # used to test branches on Jenkins, leave branch=master by default
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=MPMBRWP-19_batch_action_concatenate_annexes
 # profiles specific package, defined here because Jenkins will change the branch when needed
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 Products.MeetingCharleroi = git ${remotes:imio}/Products.MeetingCharleroi.git pushurl=${remotes:imio_push}/Products.MeetingCharleroi.git branch=master
