Branch for PM-3433 imio.webspellchecker integration

--- a/sources.cfg
+++ b/sources.cfg
@@ -51,12 +51,13 @@ imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio
 imio.pm.ws = git ${remotes:imio}/imio.pm.ws.git pushurl=${remotes:imio_push}/imio.pm.ws.git
 imio.prettylink = git ${remotes:imio}/imio.prettylink.git pushurl=${remotes:imio_push}/imio.prettylink.git
 imio.pyutils = git ${remotes:imio}/imio.pyutils.git pushurl=${remotes:imio_push}/imio.pyutils.git
+imio.webspellchecker = git ${remotes:imio}/imio.webspellchecker.git pushurl=${remotes:imio_push}/imio.webspellchecker.git
 imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio_push}/imio.zamqp.core.git
 imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
 
 Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
 # used to test branches on Jenkins, leave branch=master by default
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=PM-3433_integrate_imio_webspellchecker
 # profiles specific package, defined here because Jenkins will change the branch when needed
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 Products.MeetingCharleroi = git ${remotes:imio}/Products.MeetingCharleroi.git pushurl=${remotes:imio_push}/Products.MeetingCharleroi.git branch=master
