--- a/versions.cfg
+++ b/versions.cfg
@@ -52,6 +52,7 @@ imio.history = 1.34
 imio.pm.locales = 4.2.17
 imio.prettylink = 1.22
 imio.pyutils = 1.0.1
+imio.webspellchecker = 1.0b7
 natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.7
