--- a/dev.cfg
+++ b/dev.cfg
@@ -53,6 +53,7 @@ auto-checkout =
     ftw.labels
     imio.pm.locales
     imio.pm.ws
+    imio.webspellchecker
     imio.zamqp.core
     imio.zamqp.pm
     plone.restapi
