--- a/versions.cfg
+++ b/versions.cfg
@@ -20,14 +20,14 @@ collective.behavior.talcondition = 1.0a1
 collective.ckeditor = 4.10.1
 collective.compoundcriterion = 0.7
 collective.contact.core = 1.39
-collective.contact.plonegroup = 1.49
+collective.contact.plonegroup = 1.50
 collective.contact.widget = 1.13
 collective.dexteritytextindexer = 2.2.1
 collective.documentgenerator = 3.43
 collective.eeafaceted.batchactions = 1.15
 collective.eeafaceted.collectionwidget = 1.17
 collective.eeafaceted.dashboard = 0.20
-collective.eeafaceted.z3ctable = 2.26
+collective.eeafaceted.z3ctable = 2.27
 collective.fingerpointing = 1.8.2
 collective.js.fancytree = 2.20.0.1
 collective.js.iframeresizer = 0.4
@@ -43,21 +43,21 @@ dexterity.localroles = 1.4
 ecreall.helpers.upgrade = 1.4
 ftw.labels = 2.0.1
 imio.annex = 2.22
-# XXX use imio.actionspanel 1.65+ when managing portal_type title
-imio.actionspanel = 1.64
+imio.actionspanel = 1.67
 imio.dashboard = 2.12
 imio.helpers = 1.0.0rc2
 imio.migrator = 1.34
 imio.history = 1.34
-imio.pm.locales = 4.2.17
+imio.pm.locales = 4.2.18
 imio.prettylink = 1.22
 imio.pyutils = 1.0.3
+imio.webspellchecker = 1.0b7
 natsort = 6.2.1
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.7
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
-plonetheme.imioapps = 2.47
+plonetheme.imioapps = 2.48
 Products.CPUtils = 1.25
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
@@ -237,8 +237,8 @@ PyPDF2 = 1.26.0
 functools32 = 3.2.3.post2
 
 # plonemeeting.restapi
-imio.restapi = 1.0rc1
-plonemeeting.restapi = 2.5
+imio.restapi = 1.0rc2
+plonemeeting.restapi = 2.6
 
 plone.restapi = 7.8.2
 PyJWT = 1.7.1
