--- a/versions.cfg
+++ b/versions.cfg
@@ -5,17 +5,17 @@ pip = 20.3.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.2.9rc6
+Products.PloneMeeting = 4.2.9
 
 # profile specific versions
-Products.MeetingCommunes = 4.2.7
+Products.MeetingCommunes = 4.2.8
 
 # Required by:
 # Products.PloneMeeting
 appy = 1.0.15
 archetypes.schematuning = 1.2
 beautifulsoup4 = 4.5.3
-collective.behavior.internalnumber = 0.3
+collective.behavior.internalnumber = 0.4
 collective.behavior.talcondition = 1.0a1
 collective.ckeditor = 4.10.1
 collective.compoundcriterion = 0.7
@@ -43,12 +43,12 @@ dexterity.localroles = 1.4
 ecreall.helpers.upgrade = 1.4
 ftw.labels = 2.0.1
 imio.annex = 2.22
-imio.actionspanel = 1.67
+imio.actionspanel = 1.68
 imio.dashboard = 2.12
-imio.helpers = 1.0.0rc2
+imio.helpers = 1.0.0rc3
 imio.migrator = 1.34
-imio.history = 1.34
-imio.pm.locales = 4.2.18
+imio.history = 1.35
+imio.pm.locales = 4.2.19
 imio.prettylink = 1.22
 imio.pyutils = 1.0.3
 imio.webspellchecker = 1.0b7
@@ -57,7 +57,7 @@ plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.7
 # plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
 plone.formwidget.namedfile = 2.0.5
-plonetheme.imioapps = 2.48
+plonetheme.imioapps = 2.49
 Products.CPUtils = 1.25
 Products.PasswordStrength = 0.4
 python-dateutil = 2.7.3
@@ -238,8 +238,7 @@ functools32 = 3.2.3.post2
 
 # plonemeeting.restapi
 imio.restapi = 1.0rc2
-plonemeeting.restapi = 2.6
-
+plonemeeting.restapi = 2.7
 plone.restapi = 7.8.2
 PyJWT = 1.7.1
 plone.schema = 1.2.1
